Rename 'lr' to 'learning_rate' in configuration

--- a/configs/ddpm_modal.yaml
+++ b/configs/ddpm_modal.yaml
@@ -28,7 +28,8 @@ ddpm:
 training:
   batch_size: 64
   num_iterations: 2000
-  lr: 0.0002
+  training:
+  learning_rate: 0.0002
   weight_decay: 0.0
   gradient_clip_norm: 1.0
   log_every: 50
