--- a/configs/ddpm_modal.yaml
+++ b/configs/ddpm_modal.yaml
@@ -49,5 +49,6 @@ infrastructure:
 checkpoint:
   resume_path: null
 logging:
+  dir: ./logs
   wandb: false
-  project: cmu-10799-ddpm
+  project: cmu-10799-diffusion
