--- a/configs/ddpm_modal.yaml
+++ b/configs/ddpm_modal.yaml
@@ -50,5 +50,9 @@ checkpoint:
   resume_path: null
 logging:
   dir: ./logs
-  wandb: false
-  project: cmu-10799-diffusion
+  wandb:
+    enabled: false
+    project: cmu-10799-diffusion
+    entity: null
+    name: null
+
