--- a/configs/ddpm_modal.yaml
+++ b/configs/ddpm_modal.yaml
@@ -26,22 +26,22 @@ ddpm:
   beta_start: 0.0001
   beta_end: 0.02
 training:
-  batch_size: 64
-  num_iterations: 2000
-  training:
+  num_iterations: 200000
   batch_size: 64
   learning_rate: 0.0002
   betas: [0.9, 0.999]
+  log_every: 50
+  sample_every: 5000
+  save_every: 20000
   weight_decay: 0.0
   gradient_clip_norm: 1.0
-  log_every: 50
-  sample_every: 200
   checkpoint_every: 1000
   ema_decay: 0.9999
   ema_start: 0
 sampling:
   num_samples: 64
   num_steps: 1000
+  eta: 0.0
 infrastructure:
   seed: 42
   device: cuda
